# mini-extension

./: .gitignore  README.md  build.py  pyproject.toml
extension_only/: build_extension.py  pyproject.toml
extension_only/extension/: hello_world.c
external_archive/: build.py  build_extension.py  pyproject.toml
external_archive/extension/: hello_world.c
external_archive/external_archive/src/: hello.c
external_c_source/: hello.c
include/external_shared/: hello.h
mini_extension/: __init__.py  external_source.c  internal_source.c
shared_library/: build.py
shared_library/extension/: hello_world.py
shared_library/external_library/src/: hello.c
shared_library_with_ctypes/: build_extension.py  pyproject.toml
shared_library_with_ctypes/extension/: hello_world.py
src/external_lib/: hello.c
src/external_shared/: hello.c
