[tool.poetry]
name = "extension"
version = "0.1.0"
description = "A minimal example of building a .dll/.so with poetry."
authors = ["Sebastian Wallkötter <sebastian@wallkoetter.net>"]
license = "BSD 3-clause"
build="build_extension.py"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

# Poetry pre-1.2 style
[tool.poetry.dev-dependencies]

# Poetry 1.2 style
[tool.poetry.group.dev.dependencies]
setuptools = "^65.6.3"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
